[package]
name = "a2f"
version = "0.2.0"
edition = "2021"
description = "Analysis to Fake - Asynchronous timestamp-bonded cryptography protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kcjsa/a2f"

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", optional = true, features = ["net", "time"] }
hkdf = "0.12"
sha2 = "0.10"

[features]
default = ["std"]
std = []
async = ["dep:tokio"]
full = ["std", "async"]

[dev-dependencies]
env_logger = "0.10"