[package]
name = "a2f-el"
version = "0.2.0"
edition = "2021"
description = "Analysis to Fake - EL is a load-reduced version of A2F. It removes AES-256-GCM and uses only chacha20poly."
license = "Apache-2.0"
repository = "https://github.com/kcjsa/a2f"
exclude = ["target/", "test_code.zip"]

[dependencies]
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
sha2 = "0.10"
hkdf = "0.12"

[dev-dependencies]
env_logger = "0.10"
